<resources>
    <string name="app_name">ShirazU </string>

    <string name="news">News</string>
    <string name="announcement">Announcement</string>
    <string name="email">Email</string>


    <string name="enter_email">نام کاربری</string>
    <string name="enter_password">رمز عبور</string>
    <string name="login_button">ورود</string>
    <string name="forgot_password_button">رمز عبورتان را فراموش کرده اید؟</string>

    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="draft">Drafts</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="contacts">Contacts</string>
    <string name="Calendar">Calendar</string>
    <string name="tasks">Tasks</string>
    <string name="journal">Journal</string>
    <string name="notes">Notes</string>
    <string name="mail_header">Mailboxes</string>
    <string name="compose">Compose</string>

    <string name="mail">Mail</string>
    <string name="from">From :  </string>
    <string name="to">To :  </string>

    <string name="views">بازدید:</string>
    <string name="source">منبع:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_email_show">EmailShow</string>
    <string name="title_activity_email_navigation">EmailNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="_2_day_ago">2 day ago</string>
    <string name="fox_news">shiraz news</string>

    <string name="todo">TODO</string>
    <string name="persion_news">   اخبار</string>
    <string name="persion_email">   ایمیل</string>
    <string name="persion_announcement">   اطلاعیه</string>

</resources>
