<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteforemail"
    tools:context=".EmailActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/whiteforemail"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layoutDirection="rtl">

        <ImageView
            android:id="@+id/email_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:paddingBottom="30dp"
            android:src="@drawable/email_icon" />

        <TextView
            android:id="@+id/enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email" />

        <EditText
            android:id="@+id/username_or_email"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:background="@drawable/edit_text_style"
            android:ems="15"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@color/bluepallet" />

        <TextView
            android:id="@+id/enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/enter_password" />



        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/edit_text_style"
            android:ems="15"
            android:inputType="textPassword"
            android:textCursorDrawable="@color/bluepallet" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="19"
            android:text="@string/login_button"
            android:textColor="#ffffff"
            android:background="@drawable/button_style"/>

        <Button
            android:id="@+id/forget_password"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_button"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
