<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorIconGray"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/mail"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/spam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spam"
                android:onClick="spam"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/delete"
                android:onClick="delete"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/spam" />

            <ImageView
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/forward"
                android:onClick="forward"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/delete" />

            <ImageView
                android:id="@+id/reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/reply"
                android:onClick="reply"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/forward" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/mail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/from_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/from"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/from_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sender email address goes here"
                    android:textColor="@color/colorIconBlue"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/from_txt"/>

                <TextView
                    android:id="@+id/to_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/from_txt"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/to_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="receiver email address goes here"
                    android:textColor="@color/colorIconBlue"
                    app:layout_constraintLeft_toRightOf="@+id/to_txt"
                    app:layout_constraintTop_toBottomOf="@+id/from_username"/>

            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/mail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="mail title goes here"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/mail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mail date goes here"
                    app:layout_constraintTop_toBottomOf="@id/mail_title"
                    app:layout_constraintLeft_toLeftOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Mail content goes here" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>